--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         websites using SASS. So let's Learn it now.
       </p>
       <button class="welcome-card__btn">Learn More @cyberDude</button>
+      <button class="btn btn-default">Default Butoon</button>
+      <button class="btn btn-primary">Primary Butoon</button>
+      <button class="btn btn-success">Sucess Butoon</button>
+      <button class="btn btn-dark">Sucess Butoon</button>
     </div>
   </body>
 </html>
