--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         In this course you will learn about SASS and you can build great
         websites using SASS. So let's Learn it now.
       </p>
-      <button class="welcome-card__btn">Learn More @cyberDude</button>
+      <button class="welcome-card__btn">Learn More</button>
       <button class="btn btn-default">Default Butoon</button>
       <button class="btn btn-primary">Primary Butoon</button>
       <button class="btn btn-success">Sucess Butoon</button>
